--- a/src/App.css
+++ b/src/App.css
@@ -172,18 +172,6 @@ ul.resume-list li i.firsti{
   font-size: .87rem;
 }
 
-/* 
- ul .custom-li span{
-  display: inline-block;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-} 
- .nav-bar ul .custom-li button:active{
-  background: black;
-
-}  */
 
 .nav-pills li a{
   width: 220px;
@@ -202,22 +190,6 @@ ul.resume-list li i.firsti{
 .nav-pills li a.active{
   background-position: left top !important;
 }
-/* .nav-pills li.li1 a{
-  width: 200px;
-  height: 50px;
-  position:relative;
-}
-.nav-pills li.li1 a:before{
-  content: "";
-  display: block;
-  width: 80px;
-  height: 5px;
-  border-radius: 5px;
-  background-color: #888888 ;
-  position: absolute;
-  left:-100px;
-  top:25%;
-} */
 
 
 
@@ -352,6 +324,9 @@ ul.resume-list li i.firsti{
    
 }
 @media (max-width: 576px) {
+  .contact-box{
+    width: 95%;
+  }
   ul.resume-list li i.lasti{
     padding-bottom: 25px;
   }
