--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ html{
 }
 .aboutPic{
   width:100%;
-  height: 650px;
+  height: 560px;
 }
 .about-box ul li{
   color: #f57208;
@@ -134,6 +134,10 @@ ul.resume-list li i.firsti{
 .tab-home  li{
   color:#f57208;
 
+}
+.tab-home ul li a{
+  text-decoration: none;
+  color: #f57208;
 }
 .tab-home  li p{
   color: black;
@@ -338,6 +342,6 @@ ul.resume-list li i.firsti{
   }
   .aboutPic{
     width:100%;
-    height: 500px;
+    height: 400px;
   }
 }
